- changed settings ui a bit - added queue setting to file menu - bug fix with exit menu item